--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ xcuserdata/
 DerivedData/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .vscode/
+.swiftpm/xcode/xcshareddata/xcschemes/spi-release-notes.xcscheme
