--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,34 +6,38 @@ on:
     pull_request: [ main ]
 
 jobs:
-  build:
-    runs-on: macos-11
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
+  strategy:
+    matrix:
+      os: [macos-11, ubuntu-20.04]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: make build
+    build:
+      runs-on: ${{ matrix.os }}
+      env:
+        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
 
-  test:
-    runs-on: macos-11
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
+      steps:
+      - uses: actions/checkout@v2
+      - name: Release Build
+        run: make build
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Test
-      run: make test
+    test:
+      runs-on: ${{ matrix.os }}
+      env:
+        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
 
-  install:
-    runs-on: macos-11
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
+      steps:
+      - uses: actions/checkout@v2
+      - name: Test
+        run: make test
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install
-      run: make install
-    - name: Uninstall
-      run: make uninstall
+    install:
+      runs-on: ${{ matrix.os }}
+      env:
+        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
+
+      steps:
+      - uses: actions/checkout@v2
+      - name: Install
+        run: make install
+      - name: Uninstall
+        run: make uninstall
