Add macos-12 as test platform

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, ubuntu-20.04]
+        # https://github.com/actions/virtual-environments
+        os: [macos-12, macos-11, ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
     env:
