--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         # https://github.com/actions/virtual-environments
-        os: [macos-12, macos-11, ubuntu-20.04]
+        os: [macos-13, macos-12, macos-11, ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
     env:
