--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,55 +17,89 @@ name: CI
 on:
   push:
     branches: [ '*' ]
-    pull_request: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  build-macos:
     strategy:
       fail-fast: false
       matrix:
         # https://github.com/actions/virtual-environments
-        os: [macos-13, macos-12, macos-11, ubuntu-20.04]
-
+        os: [macos-13, macos-12, macos-11]
     runs-on: ${{ matrix.os }}
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
-
     steps:
     - uses: actions/checkout@v2
     - name: Release Build
       run: make build
 
-  test:
+  test-macos:
     strategy:
       fail-fast: false
       matrix:
         # https://github.com/actions/virtual-environments
-        os: [macos-12, macos-11, ubuntu-20.04]
-
+        os: [macos-12, macos-11]
     runs-on: ${{ matrix.os }}
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
-
     steps:
     - uses: actions/checkout@v2
     - name: Test
       run: make test
 
-  install:
+  install-macos:
     strategy:
       fail-fast: false
       matrix:
         # https://github.com/actions/virtual-environments
-        os: [macos-12, macos-11, ubuntu-20.04]
-
+        os: [macos-12, macos-11]
     runs-on: ${{ matrix.os }}
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
-
     steps:
     - uses: actions/checkout@v2
     - name: Install
       run: env prefix=/tmp make install
     - name: Uninstall
       run: env prefix=/tmp make uninstall
+
+  build-linux:
+        strategy:
+          fail-fast: false
+          matrix:
+            image: ['swift:5.7-focal', 'swift:5.8-focal']
+        runs-on: ubuntu-latest
+        container:
+          image: ${{ matrix.image }}
+        steps:
+        - uses: actions/checkout@v2
+        - run: apt-get -y update && apt-get install make
+        - name: Release Build
+          run: make build
+
+  test-linux:
+        strategy:
+          fail-fast: false
+          matrix:
+            image: ['swift:5.7-focal', 'swift:5.8-focal']
+        runs-on: ubuntu-latest
+        container:
+          image: ${{ matrix.image }}
+        steps:
+        - uses: actions/checkout@v2
+        - run: apt-get -y update && apt-get install make
+        - name: Test
+          run: make test
+
+  install-linux:
+        strategy:
+          fail-fast: false
+          matrix:
+            image: ['swift:5.7-focal', 'swift:5.8-focal']
+        runs-on: ubuntu-latest
+        container:
+          image: ${{ matrix.image }}
+        steps:
+        - uses: actions/checkout@v2
+        - run: apt-get -y update && apt-get install make
+        - name: Install
+          run: env prefix=/tmp make install
+        - name: Uninstall
+          run: env prefix=/tmp make uninstall
+  
